I was finally able to render an individual post
Working Hard to get a job as a developer at the end of this month . Putting My trust In God.

--- a/content/posts/react-crash-course.mdx
+++ b/content/posts/react-crash-course.mdx
@@ -1,14 +1,14 @@
 ---
-title: 'Django Crash Course'
-date: 'May 5, 2021'
-excerpt: 'Django is a very powerful, high level Python framework for building web applications'
-cover_image: '/images/posts/img3.jpg'
-category: 'Python'
-author: 'Sam Smith'
-author_image: 'https://randomuser.me/api/portraits/men/12.jpg'
+title: 'React Crash Course'
+date: 'May 8, 2021'
+excerpt: 'Crash course to learn the React JavaScript library. We will look at components, hooks and more'
+cover_image: '/images/posts/img5.jpg'
+category: 'JavaScript'
+author: 'Jane Doe'
+author_image: 'https://randomuser.me/api/portraits/women/11.jpg'
 ---
 
-<!-- Markdow generator - https://jaspervdj.be/lorem-markdownum/ -->
+
 
 Lorem markdownum fine incustoditam unda factura versum occuluere Aeneas, iuvat
 haec praepes [partes epulae](http://cui.com/), in egisse de. Caecisque ter
