--- a/content/posts/tailwind-vs-bootstrap.mdx
+++ b/content/posts/tailwind-vs-bootstrap.mdx
@@ -1,14 +1,14 @@
 ---
-title: 'Python Book Review'
-date: 'May 7, 2021'
-excerpt: 'In this review, we will be looking at the new Python book from Oriley'
-cover_image: '/images/posts/img6.jpg'
-category: 'Python'
-author: 'Mike Richards'
-author_image: 'https://randomuser.me/api/portraits/men/13.jpg'
+title: 'Tailwind vs. Bootstrap'
+date: 'May 5, 2021'
+excerpt: 'Both Tailwind and Bootstrap are very popular CSS frameworks. In this article, we will compare them'
+cover_image: '/images/posts/img2.jpg'
+category: 'CSS'
+author: 'Jane Doe'
+author_image: 'https://randomuser.me/api/portraits/women/11.jpg'
 ---
 
-<!-- Markdow generator - https://jaspervdj.be/lorem-markdownum/ -->
+
 
 Lorem markdownum fine incustoditam unda factura versum occuluere Aeneas, iuvat
 haec praepes [partes epulae](http://cui.com/), in egisse de. Caecisque ter
