--- a/content/posts/javascript-performance-tips.mdx
+++ b/content/posts/javascript-performance-tips.mdx
@@ -1,14 +1,13 @@
 ---
-title: 'Writing Great Unit Tests'
-date: 'May 12, 2021'
-excerpt: 'We will look at 10 simple tips and tricks on writing unit tests in JavaScript'
-cover_image: '/images/posts/img7.jpg'
+title: 'JavaScript Performance Tips'
+date: 'May 4, 2021'
+excerpt: 'We will look at 10 simple tips and tricks to increase the speed of your code when writing JS'
+cover_image: '/images/posts/img1.jpg'
 category: 'JavaScript'
 author: 'John Doe'
 author_image: 'https://randomuser.me/api/portraits/men/11.jpg'
 ---
 
-<!-- Markdow generator - https://jaspervdj.be/lorem-markdownum/ -->
 
 
 Lorem [markdownum](http://insunt.org/inpositaque), et sanguine rutilos dixit
