--- a/content/posts/python-book-review.mdx
+++ b/content/posts/python-book-review.mdx
@@ -1,14 +1,14 @@
 ---
-title: 'React Crash Course'
-date: 'May 8, 2021'
-excerpt: 'Crash course to learn the React JavaScript library. We will look at components, hooks and more'
-cover_image: '/images/posts/img5.jpg'
-category: 'JavaScript'
-author: 'Jane Doe'
-author_image: 'https://randomuser.me/api/portraits/women/11.jpg'
+title: 'Python Book Review'
+date: 'May 7, 2021'
+excerpt: 'In this review, we will be looking at the new Python book from Oriley'
+cover_image: '/images/posts/img6.jpg'
+category: 'Python'
+author: 'Mike Richards'
+author_image: 'https://randomuser.me/api/portraits/men/13.jpg'
 ---
 
-<!-- Markdow generator - https://jaspervdj.be/lorem-markdownum/ -->
+
 
 Lorem markdownum fine incustoditam unda factura versum occuluere Aeneas, iuvat
 haec praepes [partes epulae](http://cui.com/), in egisse de. Caecisque ter
