made the navigation bar responsive

--- a/content/posts/django-crash-course.mdx
+++ b/content/posts/django-crash-course.mdx
@@ -5,6 +5,7 @@ excerpt: 'Django is a very powerful, high level Python framework for building we
 cover_image: '/images/posts/img3.jpg'
 category: 'Python'
 author: 'Sam Smith'
+language: 'python'
 author_image: 'https://randomuser.me/api/portraits/men/12.jpg'
 ---
 
@@ -30,11 +31,13 @@ consequitur et quoque scinditque in. Ratis laborum instabat quaedam partem
 Phoebus, manus _partibus poenas_. Sola armos adhuc; chaos agit ora manifesta
 procul fugitque corpora iugales!
 
+```javascript
     var ethics_font_drive = cycleSystemProgram + deprecatedTransferIp.ide(3) /
             rgb + nybbleBaseband;
     permalinkCertificateMacintosh(ergonomicsIsdnDns);
     boot = bridgeDaemonActive;
 
+```
 ## O contra diu
 
 Descendit _auras cum misi_ contactu tenax lacus, **quaerensque invitum
