made changes to nextjs Link ta add some styling

--- a/content/posts/django-crash-course.mdx
+++ b/content/posts/django-crash-course.mdx
@@ -1,65 +1,59 @@
 ---
-title: 'Django Crash Course'
-date: 'May 5, 2021'
-excerpt: 'Django is a very powerful, high level Python framework for building web applications'
-cover_image: '/images/posts/img3.jpg'
-category: 'Python'
-author: 'Sam Smith'
-language: 'python'
-author_image: 'https://randomuser.me/api/portraits/men/12.jpg'
+title: 'JavaScript Performance Tips'
+date: 'May 4, 2021'
+excerpt: 'We will look at 10 simple tips and tricks to increase the speed of your code when writing JS'
+cover_image: '/images/posts/img1.jpg'
+category: 'JavaScript'
+author: 'John Doe'
+author_image: 'https://randomuser.me/api/portraits/men/11.jpg'
 ---
 
 
 
-Lorem markdownum fine incustoditam unda factura versum occuluere Aeneas, iuvat
-haec praepes [partes epulae](http://cui.com/), in egisse de. Caecisque ter
-manus. Munere in exhalat, ferre sed [habe quaeque saepe](http://ne.org/fretum)
-verba caput ferarum _nubila_? Patriam Cyparisse tamen, **saxum** fide postponere
-pavida ne omnes etiam, atque. Sonuit omina sed sine haerebat illic fit a mora
-in.
+Lorem [markdownum](http://insunt.org/inpositaque), et sanguine rutilos dixit
+nigro cornu genus duris linguae. Super hic deus ego adveniens nullumque Venerem
+equis aurem aliisque celare densis dextramque similis **post**: mihi rexerat;
+bis.
 
-1. Serrae enim Etruscam aquis
-2. Et premis et flumine frontem minatur oppressos
-3. Inquam rector Icarus possum vim tumulo propiusque
-4. Vulnus se Latreus
-5. Aptumque bis
+1. Scinditur annos
+2. Talia verba
+3. Habet delata villis domui
+4. Geminum viscere deum et utque
 
-## Turpius Aegides membris colat volentes fallere
+## Magnorum nulla avertit pedem neque monimenta terram
 
-Ille fida formosus, et addunt viscera perdidit ad pondere quia tellus
-consequitur et quoque scinditque in. Ratis laborum instabat quaedam partem
-Phoebus, manus _partibus poenas_. Sola armos adhuc; chaos agit ora manifesta
-procul fugitque corpora iugales!
+Quo numquam, nunc [concussaque](http://mox-cunctos.net/), hora effugit mihi,
+pectore. Hinc fausto, circumspicit cadas; virilibus rapui, timidum rorat cuique
+animorum ac! Quem sit. Venit qui, rex sibi tota, peto _fortis ira suis_ dolusque
+simulatque [incipit crudelesque
+pavens](http://www.corpora.com/terrae-oscula.html) spatiosa conlegit oscula
+equam.
 
-```javascript
-    var ethics_font_drive = cycleSystemProgram + deprecatedTransferIp.ide(3) /
-            rgb + nybbleBaseband;
-    permalinkCertificateMacintosh(ergonomicsIsdnDns);
-    boot = bridgeDaemonActive;
+## Mensis idem
 
-```
-## O contra diu
+Caelestia Ganymedes gentis. Veni inpellit publica tecta bellaque mortali loca
+_mea gente_ qui Enipeus iramque et hoc. _Altera Rex vetitum_; hoc magis dolores
+precor nec. Ubi verba, et aras regia, cognoscere vites tempusque expers, heros?
 
-Descendit _auras cum misi_ contactu tenax lacus, **quaerensque invitum
-premuntur** patria. Puris ille pictis spiritus placent vestigia et noctis
-sceleratos laudis egere retroque. Patrem contenta magni margine satis inprudens
-nymphae invito verba saepe: genus sed numinis pugnat meum iterumque attonitas
-rursus utve. Constituit praestet liceat opprobria Medusae huius, excutiuntque
-nam nil, pariter.
+## Mihi puto pallorem
 
-Coma **laudes manet** ausus hortaturque matrisque Veneris proximus tu iamque
-aptius claudit. Tmolus tetigere iussos animumque quid poplite Hippotaden? Quod
-sibi Spartana sidera, lupum Nereusque quoque ramum, vertuntur Peleus Amuli
-oscula: tamen. Surgere Epidaurius movit crede soceri Euboicam quoque.
+Hac forma, habeo quam et patria, ille tulit volat quamquam vulnus, aere est.
+Ignis sequerere membra Pirithoo: caruerunt saevumque, sumus, ignesque poterit
+intus de fonte.
 
-Unde stabant, acuta, percussit denique; hoc illic et herbis minimas parvum? Quid
-_gemino profectus et_ dici postquam tot; aquarum quod relanguit est si
-quodcumque. Ossaque protinus, quod somno est, repetit, hoc passu est. Qui devia;
-respice humum vobis oscula, in Lotis nymphae.
+## Quondam montibus tua spes consilioque nata consilioque
 
-Dolet certamina velle dexteriore mutatus saepe, tellure ubi unguibus, gestu.
-Illis cuius finem Sirenes adsueta stridore, pictas quo edidit, nec utque et
-capillos ego rapi Bootes, sculpsit. Protinus sibi denique sibi primum Acheloides
-ante exspectant gaudeat Calydonius cernit, duxit pariterque dolet epulis? Nostri
-visae nisi aeripedes stant quem saepibus cannis protectus candens praestet:
-porrigar **patriam** Alcmene: attonitas.
+Abigitque limite. Ipsa levis extulit munera, litora, ira pavet in morte, **te
+in** quas [vix](http://auxiliumquefando.net/vocibus-cum). Mitis tinxit, modus
+promissa **ne volucris** simul genetrixque Iovis in deae modo **in** des.
+_Memini isto hostilia_ Aeneas, in ponto **nova eventu cetera** iugum animam
+ille, viro, nec. Loquendi aves insisto saecula premente nec, at ego poscit ubi
+sub!
+
+- Tristis natorum ora talia patriis famae naidas
+- Deus scilicet male miliaque noctisque invenio Nilum
+- Efficerentque devexaque foret haec leve ab fertilis
+
+Institerat quantum facies parientem, crepitantis nondum. Atque atris arcebat
+factis nil Lucina mori sinu est partibus specie, imo interea tellus luctu
+inmunitamque genus Amphitryoniaden?
