finished making the blog page

--- a/content/posts/django-crash-course.mdx
+++ b/content/posts/django-crash-course.mdx
@@ -10,6 +10,8 @@ author_image: 'https://randomuser.me/api/portraits/men/11.jpg'
 
 
 
+![my image ](/images/posts/img1.jpg)
+
 Lorem [markdownum](http://insunt.org/inpositaque), et sanguine rutilos dixit
 nigro cornu genus duris linguae. Super hic deus ego adveniens nullumque Venerem
 equis aurem aliisque celare densis dextramque similis **post**: mihi rexerat;
