--- a/content/code-snippets/new-in-php-8.mdx
+++ b/content/code-snippets/new-in-php-8.mdx
@@ -4,8 +4,8 @@ date: 'May 7, 2021'
 excerpt: 'In this article we will look at some of the new features offered in version 8 of PHP'
 cover_image: '/images/posts/img4.jpg'
 category: 'PHP'
-author: 'Sara Johnson'
-author_image: 'https://randomuser.me/api/portraits/women/12.jpg'
+author: 'mcwachira'
+type:'snippet'
 ---
 
 Lorem markdownum erat meritum instat quis! Parari vera harundinibus molibus nam
